--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Solrak's Script Kiddie Database
+longtitle:        Solrak's Script Kiddie Database
+author:           Solrak
+email:            jeannnovak@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
